fetching  college data and provided  recommendaion logic